syntax = "proto3";

option go_package = "/internal/pkg/genproto";

import "muallimah-submodule/protos/common.proto";

package protos;


service CategoryService {
    rpc CreateCategory(CategoryCreateReq) returns (Void);
    rpc GetCategory(ById) returns (Category);
    rpc UpdateCategory(CategoryUpdateReq) returns (Void);
    rpc DeleteCategory(ById) returns (Void);
    rpc ListCategories(Pagination) returns (CategoryListRes);
}

message Category {
    string id = 1;
    string name = 2;
}

message CategoryCreateReq {
    string name = 1;
}

message CategoryUpt {
    string name = 1;
}

message CategoryUpdateReq {
    string id = 1;
    CategoryUpt Body = 2;
}

message CategoryListRes {
    repeated Category categories = 1;
    Pagination pagination = 2;
    int32 total_count = 3;
}